kubernetes/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
  labels:
    app: fastapi-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
        - name: fastapi-app
          image: image-registry.openshift-image-registry.svc:5000/fd34fb-dev/fastapi-app:v2
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: job-profiles-db
              mountPath: /app/job_profiles_db
            - name: api-cache
              mountPath: /app/cache

      volumes:
        - name: job-profiles-db
          persistentVolumeClaim:
            claimName: job-profiles-db-pvc
        - name: api-cache
          persistentVolumeClaim:
            claimName: api-cache-pvc
